
	* upstream merge
	* Merge remote-tracking branch 'remotes/origin/upstream'

2012-07-03  Christopher Michael

	* Merge Tizen changes to upstream EFL.
	* Support gif scaling in evas gif loader.
	* Create vertex & fragment shader(s) in the gl_common engine.
	* Don't call glGetTexLevelParameteriv unless it is supported.
	* Support evas_cserve2 in the wayland_shm engine.
	* When freeing a gl_x11 window, make sure to call eglMakeCurrent with a null surface
		to inform EGL that this window is no longer valid.

2012-07-04  Cedric Bail

	* Make pipeline rendering use more extensively the prepare stage.

2012-07-04  Gustavo Lima Chaves

	* Add simple interfaces support to Evas smart classes

2012-07-05  ChunEon Park(Hermet)

	* Fixed Map pipe region issue. It caused the incorrect object rendering order
  	on gl backened.

2012-07-05  Cedric Bail

	* Strongly disable Evas pipe rendering.

2012-07-05  Cedric Bail

	* Don't let bad map sneek at render time and ban them as early as possible.

2012-07-07  ChunEon Park(Hermet)

	* Let Draw Text with viewport size instead of window size. When map is enabled then it should be rendered completely.

2012-07-11  Tom Hacohen (TAsn)

	* Fixed runtime emboldenment with bitmap fonts.

2012-07-16  Hermet (ChunEon Park)

	* Fixed to do pre render for the children of mapped object.

2012-07-17  Cedric Bail

	* Fix garbage left by mapped smart object when they fly away from the canvas.
	* Fix map life cycle.

2012-07-18  Carsten Haitzler (The Rasterman)

        * Fix evas box to not skip dealing with size hint changes
          while it lays out objects. This breaks elementary badly and it should
          never have done this. This broke the general logic of size
          hint handling.

2012-07-19  Jiyoun Park(jypark)

        * Fix jpeg save bug related with error handler

2012-07-22  Cedric Bail

	* Don't crash when calling evas_object_smart_type_check without type.

2012-07-24  Ingvaldur Sigurjonsson

	* Fix typoe in docs